bpo-40839: PyDict_GetItem() requires the GIL

Calling PyDict_GetItem() without GIL held had been allowed for
historical reason. It is no longer allowed.